--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,20 @@
 
       </tbody>
     </table>
+
+    <h1>Employees</h1>
+    <table>
+      <thead>
+        <th>&nbsp;</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="employees">
+
+      </tbody>
+    </table>
     <script src= "bundle.js"></script>
   </body>
 </html>
